
=======================================================
            WanT code:  Log of Changes 
=======================================================


07 Jun 2009      Parallel read-in of selfenergies added to embed.x . (AF)

05 Jun 2009      Embedding code completed and partly tested. (AF)

04 Jun 2009      Embedding dir added; Changes spread all over accordingly. (AF)

24 May 2009      Write part of lead self-energy IO in transport completed. (AF)

12 May 2009      Begun the implementation of lead self-energy IO in transport. (AF)

01 May 2009      Bug fixed in *.space file (windows_write) in the case of
                 spin polarized systems. (AF)

28 Apr 2009      Routine read_upf_v2.f90 updated according to QEspresso cvs.
                 Bugs fixed in that routine to allow reading of 1/r potentials. (AF)

16 Apr 2009      Changes in test04 because the usage of dipole.x in QE
                 is changed. (AF)

13 Apr 2009      Orthogonalization of ovp added to cmplx_bands.f90 to 
                 improve numerical accuracy. (AF)

08 Apr 2009      Updates in the script lib to run tests. (AF)

31 Mar 2009      Bug fixed in dealing with CRYSTAL06 datafiles: wan_eig are
                 no longer requested to be in .space file. (AF)

27 Mar 2009      Bug fixed in configure.ac. (AF) 

16 Mar 2009      Bug fixed in compilation without __ETSF_IO support. (AF)

13 Mar 2009      Bug fixed in kpt generation algorithm when interpolating bands
                 (one point was missing). Bug fixed in io_open_dftdata routine
                 when using the crystal interface. (AF)

21 Feb 2009      Bug fixed in the documentation of kpoints.f90 (courtesy of
                 Y.P.Wang). (AF)

18 Feb 2009      kpt sorting (and symmetrization) implemented in blc2wan.f90 .
                 (AF and Tonatiuh Rangel)

17 Feb 2009      Bugs fixed in conductor.f90: dos was not computed correctly;
                 conductance array was going out-of-bounds. Bug fixed when